# henipavirus-vaccine-development-dashboard

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART_GITHUB.md  README.md  SECURITY.md  download  pyproject.toml  requirements.txt
.github/workflow/: update-and-publish.yml  validate.yml
.github/workflows/: update-and-publish.yml  validate.yml
config/: pipeline.yml  watch_rules.yml
docs/: 404.html  index.html
docs/assets/: app.js  styles.css
docs/data/: clinical_trial_registry_status.json  henipavirus_development_pipeline_data.csv  henipavirus_development_pipeline_data.json  last_update.json  publication_watch_status.json  source_checks.csv
reports/: update_report.md
scripts/: build_site.py  update_dashboard_data.py  validate_dashboard_data.py
tests/: test_generated_data.py
